public/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  containers:
  - name: helloworld
    image: busybox
    command: ['sh', '-c', 'echo Hello World! && sleep 3600']
