public/k8s/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - port: 80
      name: http
      targetPort: 3000
