public/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: [yourname].example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: 3000
